<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.RegistrarNotas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageButton
            android:id="@+id/imgbRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/returnrow" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/nombre"
            android:ems="10"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/apellido"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp">

            <Spinner
                android:id="@+id/spGrado"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spMateria"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edtNota"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/nota"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrar"
            android:layout_gravity="center"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>